Updated the demos to the latest version of moobile

--- a/0.1/www/index.html
+++ b/0.1/www/index.html
@@ -7,7 +7,8 @@
 		<title></title>
 
 		<!-- default iOS styles -->
-		<link rel="stylesheet" href="css/iOS.css" />
+		<link rel="stylesheet" href="css/moobile.css" />
+		<link rel="stylesheet" href="css/moobile.iOS.css" />
 
 		<!-- your own styles -->
 		<link rel="stylesheet" href="css/styles.css" />
