Loading proper view controller

--- a/0.2/www/index.html
+++ b/0.2/www/index.html
@@ -38,7 +38,7 @@
 				new Moobile.WindowController()
 					.setRootViewController(new Moobile.ViewControllerStack)
 					.getRootViewController()
-					.pushViewController(new ViewController.Component.ScrollView.VPaging);
+					.pushViewController(new ViewController.Home);
 			});
 
 		</script>
