Small refactor and added all the vendor prefixes for the demo

--- a/0.2/ios/www/index.html
+++ b/0.2/ios/www/index.html
@@ -7,8 +7,8 @@
 		<title></title>
 
 		<!-- default iOS styles -->
-		<link rel="stylesheet" href="../../../moobile-core/Styles/moobile.css" />
-		<link rel="stylesheet" href="../../../moobile-core/Styles/ios/css/moobile.ios.css" />
+		<link rel="stylesheet" href="../../../../moobile-core/Styles/moobile.css" />
+		<link rel="stylesheet" href="../../../../moobile-core/Styles/ios/css/moobile.ios.css" />
 
 		<!-- your own styles -->
 		<link rel="stylesheet" href="css/app.css" />
@@ -21,7 +21,7 @@
 		<!-- <script type="text/javascript" src="js/libs/mootools-more-1.4.0.1.min.js"></script> -->
 
 		<!-- moobile -->
-		<script type="text/javascript" src="../../../moobile-core/moobile-0.2.js"></script>
+		<script type="text/javascript" src="../../../../moobile-core/moobile-0.2.js"></script>
 		<!--script type="text/javascript" src="js/libs/moobile-0.2.min.js"></script-->
 
 		<!-- your app code -->
